--- a/deploy/frontend/public/login.html
+++ b/deploy/frontend/public/login.html
@@ -111,7 +111,7 @@
 
             if (data.success) {
                 // Dopo il login redirect alla mappa
-                window.location.href = "mappa.html";
+                window.location.href = "map.html";
             } else {
                 const box = document.getElementById("error-message");
                 box.textContent = data.error || "Errore durante il login";
