--- a/deploy/frontend/public/previsioni.html
+++ b/deploy/frontend/public/previsioni.html
@@ -227,7 +227,7 @@ async function generaPrevisioni(e) {
                         title: { display: true, text: "Data" }
                     },
                     y: {
-                        beginAtZero: true,
+                        beginAtZero: false,
                         title: { display: true, text: "Numero di turisti" }
                     }
                 }
