--- a/deploy/frontend/public/map.html
+++ b/deploy/frontend/public/map.html
@@ -78,8 +78,13 @@
 							</article>
                             <article class="col-6 col-12-xsmall work-item">
                                 <img src="/images/thumbs/previsioni.jpg" style="width: 100%;" />
-                                <a href="previsioni.html"><h3>Previsioni Turistiche</h3></a>
-                                <p>Funzione che consente di generare le previsioni giornaliere dei flussi turistici in base al mese e all’area geografica selezionata.</p>
+                                <a href="previsioni_ace.html"><h3>Previsioni Mobilità</h3></a>
+                                <p>Funzione che consente di generare le previsioni giornaliere dei pedoni nel borgo.</p>
+                            </article>
+                            <article class="col-6 col-12-xsmall work-item">
+                                <img src="/images/thumbs/previsioni.jpg" style="width: 100%;" />
+                                <a href="previsioni_pedoni.html"><h3>Previsioni Pedoni</h3></a>
+                                <p>Funzione che consente di generare le previsioni giornaliere dei flussi turistici verso il borgo.</p>
                             </article>
 
 							<!-- Admin section -->
