--- a/deploy/frontend/public/linee.html
+++ b/deploy/frontend/public/linee.html
@@ -199,7 +199,7 @@
 
     <!-- JS LOGIC -->
     <script>
-        const baseURL = '/api/linee';
+        const baseURL = '/linee';
 
         // Mostra un messaggio permanente sopra la tabella
         function showPermMessage(message, type='success') {
