--- a/deploy/frontend/public/parcheggi.html
+++ b/deploy/frontend/public/parcheggi.html
@@ -166,7 +166,7 @@
     </body>
 
     <script>
-    const baseURL = '/api/parcheggi';
+    const baseURL = '/parcheggi';
 
     // Mostra un messaggio permanente sopra la tabella
     function showPermMessage(message, type='success') {
